[package]
name = "piston-lab"
version = "0.1.0"
authors = ["SLMT <sam123456777@gmail.com>"]
edition = "2018"

[dependencies]
piston = "0.39.0"
piston_window = "0.85.0"
shader_version = "0.3.0"
piston2d-opengl_graphics = "0.57.0"

[dependencies.piston2d-graphics]
version = "*"
features = ["glyph_cache_rusttype"]
