[package]
name = "piston-lab"
version = "0.1.0"
authors = ["SLMT <sam123456777@gmail.com>"]
edition = "2018"

[dependencies]
piston = "0.39.0"
piston_window = "0.85.0"
piston2d-opengl_graphics = "0.57.0"
conrod_core = "0.62.0"
conrod_piston = "0.62.0"

[dependencies.piston2d-graphics]
version = "*"
features = ["glyph_cache_rusttype"]
